rnsc/test_data/rns_integration/error/parser/type_hints/fieldref/no_operand_3.rns
.class   @fieldref MyClass fieldName ; no descriptor provided
.super java/lang/Object
